--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.3.4
 dj-database-url==0.5.0
 Django==3.2.2
 django-heroku==0.3.1
-mysqlclient @ file:///C:/Python/mysqlclient-1.4.6-cp39-cp39-win_amd64.whl
+mysqlclient == 1.4.6
 psycopg2==2.8.6
 pytz==2021.1
 sqlparse==0.4.1
